<resources>
    <string name="app_name">BakingApp</string>
    <string name="ingredients">Ingredients</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="choose_recipe_which_ingredients_will_show">Choose recipe which ingredients will show!</string>
    <string name="nutella_pie">Nutella Pie</string>
    <string name="brownies">Brownies</string>
    <string name="yellow_cake">Yellow Cake</string>
    <string name="cheesecake">Cheesecake</string>
    <string name="apple_pie">Apple pie</string>
    <string name="previous_step">previous step</string>
    <string name="next_step">next step</string>
    <string name="previous_recipe">previous recipe</string>
    <string name="next_recipe">next recipe</string>
    <string name="step_item_text">0. Recipe introduction</string>
</resources>
